# suii_control

./: .gitignore  CMakeLists.txt  README.md  package.xml  remove_pyc_ext.sh  setup.py  test_data
demo/: CMakeLists.txt  package.xml
demo/src/: demo.py
launch/: configuration_handler.launch  suii_control.launch
msg/: Waypoint.msg
scripts/: configuration_handler_node.py  sui_control_node  suii_control_node
src/sui_control/: __init__.py
suii_configurations/: bkup.text  navigation_waypoints_test.yaml  samp.yaml
suii_control/: CMakeLists.txt  package.xml
suii_control_msgs/: CMakeLists.txt  package.xml
suii_control_msgs/msg/: Identifier.msg  NavigationTask.msg  PickTask.msg  PlaceTask.msg  RobotArmPose.msg  WaypointData.msg
suii_mux_manager_comm/: CMakeLists.txt  package.xml  setup.py
suii_object_manipulation/: CMakeLists.txt  package.xml
suii_protocol/: CMakeLists.txt  nav_waypoint_test  navigation_waypoints.yaml  navigation_waypoints_old.yaml  package.xml  setup.py
suii_refbox_client/: README.md
suii_refbox_client/launch/: suii_refbox_client_local.launch
suii_refbox_client/src/: suii_refbox_client.cpp  suii_refbox_client_node.cpp
suii_task_executor/: CMakeLists.txt  README.md  package.xml  setup.py
suii_task_executor/launch/: suii_task_executor.launch
suii_task_executor/scripts/: suii_task_executor_node.py
suii_task_executor/zinki_smachine/: state.py
suii_task_manager/: CMakeLists.txt  TODO.stress  package.xml  setup.py
suii_task_manager/cppcode/: CMakeLists.txt  package.xml
test/: package.xml
zinki_smachine/: setup.py
(+131 files in other folders)
